# shard-project

./: Cargo.toml  README.md  build.rs  shard.toml
asm/: hash_crc64.asm  header_scan_avx2.asm  memcpy_erm.asm
src/: lib.rs  main.rs
src/assembly/: hash.rs  header.rs  memcpy.rs  mod.rs
src/backend/: connection.rs  health.rs  mod.rs  pool.rs  proxy.rs
src/cache/: mod.rs  multi_level.rs
src/cache/l1/: eviction.rs  key.rs  mod.rs  shard_cache.rs
src/cache/l2/: disk_cache.rs  mod.rs
src/config/: mod.rs
src/fragment/: dependency_graph.rs  mod.rs  store.rs  types.rs
src/fragment/analyzer/: boundary_detector.rs  candidate.rs  heuristic.rs  html_parser.rs  mod.rs
src/fragment/assembler/: merger.rs  mod.rs  placeholder.rs  template_cache.rs
src/server/: handler.rs  listener.rs  metrics.rs  mod.rs  router.rs
src/utils/: error.rs  logger.rs  mod.rs  time.rs
tests/integration/: fragment_integration.rs
tests/integration/proxy/: proxy_integration.rs
tests/unit/: cache_l1_tests.rs  cache_multi_level_tests.rs  dependency_graph_tests.rs  fragment_analyzer_tests.rs  fragment_store_tests.rs
