[package]
name = "shard"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = "0.1"
hyper-rustls = "0.24"
http = "1.0"
http-body-util = "0.1"
bytes = "1.5"

# Cache
dashmap = "5.5"
rocksdb = "0.21"
lru = "0.12"            # optional, but used in l1 eviction; we can add later
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Fragment parsing
lol_html = "1.2"
regex = "1.10"

# Configuration
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

# Utils
anyhow = "1.0"

[build-dependencies]
cc = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3